<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:fbutton="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DaftarLevel">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/fbutton_color_wet_asphalt"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp">

            <info.hoang8f.widget.FButton
                android:id="@+id/lvl1"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginBottom="20dp"
                android:text="@string/level_1"
                android:textColor="@android:color/white"
                android:textSize="@dimen/text_size_button"
                fbutton:buttonColor="@color/fbutton_color_sun_flower"
                fbutton:cornerRadius="5dp"
                fbutton:shadowColor="@color/fbutton_color_orange"
                fbutton:shadowEnabled="true"
                fbutton:shadowHeight="5dp" />

            <include
                android:id="@+id/newlvl1"
                layout="@layout/image_new_layout" />

            <include
                android:id="@+id/newlvel1"
                layout="@layout/image_new_level" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp">


            <info.hoang8f.widget.FButton
                android:id="@+id/lvl2"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginBottom="20dp"
                android:text="@string/level_2"
                android:textColor="@android:color/white"
                android:textSize="@dimen/text_size_button"
                fbutton:buttonColor="@color/fbutton_color_sun_flower"
                fbutton:cornerRadius="5dp"
                fbutton:shadowColor="@color/fbutton_color_orange"
                fbutton:shadowEnabled="true"
                fbutton:shadowHeight="5dp" />

            <include
                android:id="@+id/newlvl2"
                layout="@layout/image_new_layout" />

            <include
                android:id="@+id/newlvel2"
                layout="@layout/image_new_level"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp">

            <info.hoang8f.widget.FButton
                android:id="@+id/lvl3"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginBottom="20dp"
                android:text="@string/level_3"
                android:textColor="@android:color/white"
                android:textSize="@dimen/text_size_button"
                fbutton:buttonColor="@color/fbutton_color_sun_flower"
                fbutton:cornerRadius="5dp"
                fbutton:shadowColor="@color/fbutton_color_orange"
                fbutton:shadowEnabled="true"
                fbutton:shadowHeight="5dp" />

            <include
                android:id="@+id/newlvl3"
                layout="@layout/image_new_layout" />

            <include
                android:id="@+id/newlvel3"
                layout="@layout/image_new_level"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp">

            <info.hoang8f.widget.FButton
                android:id="@+id/lvl4"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginBottom="20dp"
                android:text="@string/level_4"
                android:textColor="@android:color/white"
                android:textSize="@dimen/text_size_button"
                fbutton:buttonColor="@color/fbutton_color_sun_flower"
                fbutton:cornerRadius="5dp"
                fbutton:shadowColor="@color/fbutton_color_orange"
                fbutton:shadowEnabled="true"
                fbutton:shadowHeight="5dp" />

            <include
                android:id="@+id/newlvl4"
                layout="@layout/image_new_layout" />

            <include
                android:id="@+id/newlvel4"
                layout="@layout/image_new_level" />
        </RelativeLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp">

            <info.hoang8f.widget.FButton
                android:id="@+id/lvl5"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginBottom="20dp"
                android:text="@string/level_5"
                android:textColor="@android:color/white"
                android:textSize="@dimen/text_size_button"
                fbutton:buttonColor="@color/fbutton_color_sun_flower"
                fbutton:cornerRadius="5dp"
                fbutton:shadowColor="@color/fbutton_color_orange"
                fbutton:shadowEnabled="true"
                fbutton:shadowHeight="5dp" />

            <include
                android:id="@+id/newlvl5"
                layout="@layout/image_new_layout" />

            <include
                android:id="@+id/newlvel5"
                layout="@layout/image_new_level"/>
        </RelativeLayout>

        <Button
            android:id="@+id/lvlN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="17dp"
            android:background="@drawable/level_btn"
            android:text="SEGERA"
            android:textColor="#fff"
            android:textSize="20dp"
            android:visibility="gone" />


    </LinearLayout>

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_ad_unit_id"/>
</RelativeLayout>
